--- a/src/css/main.module.css
+++ b/src/css/main.module.css
@@ -1,3 +1,24 @@
+.topContainer {
+    background: #EBF5FF;
+    min-height: 100vh;
+}
 .container {
     padding-top: 50px;
+    background: #EBF5FF;
+    left: 150px;
+    right: 150px;
+    position: fixed;
+}
+
+.side_by_side {
+    display: flex;
+    gap: 20px;
+    padding: 1.5em;
+    background: #fff;
+}
+.divider {
+    width: 2px;
+    background-color: #86c1ff;
+    margin: 0 2rem; /* 선 주위의 간격 */
+    height: 570px; /* 컨테이너 높이에 맞게 설정 */
 }
