--- a/src/css/Timetable.module.css
+++ b/src/css/Timetable.module.css
@@ -1,83 +1,83 @@
-  .table {
-    border: 1px #a39485 solid;
-    font-size: 16px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
-    width: 100%;
-    border-collapse: collapse;
-    border-radius: 5px;
-    overflow: hidden;
-    width: 570px;
-    height: 245px;
-    padding: 19px;
+
+.table {
+  border: 0.063rem #a39485 solid;
+  font-size: 1rem;
+  box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.25);
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 0.313rem;
+  overflow: hidden;
+  width: 35.625rem;
+  height: 15.313rem;
+  padding: 1.188rem;
+}
+
+.td_smaller {
+  padding: 0.5rem 1.063rem;
+}
+
+thead {
+  font-weight: bold;
+  color: black;
+  background: #B7DAFF;
+}
+
+th {
+  text-align: center;
+  padding: 0.375rem 0.75rem;
+  vertical-align: middle;
+}
+
+td {
+  padding: 0.875rem 1.875rem;
+  vertical-align: middle;
+  border-bottom: 0.063rem solid rgba(0, 0, 0, 0.1);
+  background: #fff;
+  text-align: center;
+}
+
+@media all and (max-width: 48rem) {
+  .table,
+  thead,
+  tbody,
+  th,
+  td,
+  tr {
+    display: block;
   }
 
-  .td_smaller{
-    padding:8px 17px;
-  }
-  
-  thead {
-    font-weight: bold;
-    color: black;
-    background: #B7DAFF;
-  }
-  
   th {
-    text-align: center;
-    padding: 6px 12px;
-    vertical-align: middle;
+    text-align: right;
+    border-bottom: 0.063rem solid #a39485;
   }
-  
+
+  .table {
+    width: 35.625rem;
+    height: 15.313rem;
+    position: relative;
+    padding-bottom: 0;
+    border: none;
+    box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.2);
+  }
+
+  thead {
+    float: left;
+    white-space: nowrap;
+  }
+
+  tbody {
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    white-space: nowrap;
+  }
+
+  tr {
+    display: inline-block;
+    vertical-align: top;
+  }
+
   td {
-    padding: 14px 30px;
-    vertical-align: middle;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    background: #fff;
-    text-align: center;
+    border-bottom: 0.063rem solid #e5e5e5;
   }
-  
-  @media all and (max-width: 768px) {
-    .table,
-    thead,
-    tbody,
-    th,
-    td,
-    tr {
-        display: block;
-    }
-  
-    th {
-        text-align: right;
-        border-bottom: 1px solid #a39485;
-    }
-  
-    .table {
-        width: 570px;
-        height: 245px;
-        position: relative;
-        padding-bottom: 0;
-        border: none;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    }
-  
-    thead {
-        float: left;
-        white-space: nowrap;
-    }
-  
-    tbody {
-        overflow-x: auto;
-        overflow-y: hidden;
-        position: relative;
-        white-space: nowrap;
-    }
-  
-    tr {
-        display: inline-block;
-        vertical-align: top;
-    }
-  
-    td {
-        border-bottom: 1px solid #e5e5e5;
-    }
-  }
-  
+}
