--- a/src/css/TimeLine.module.css
+++ b/src/css/TimeLine.module.css
@@ -2,7 +2,7 @@
 .step_box {
     margin: 0 1.25em 3.75em 1.25em;
     display: block;
-    width: 26.25rem;
+    width: 34em;
     padding: 0.5em 1em;
     border: 0.06em solid #e2e2e2;
     border-radius: 0.5em;
