--- a/src/css/Schedule/main.module.css
+++ b/src/css/Schedule/main.module.css
@@ -1,10 +1,3 @@
-html, body { 
-    background: #EBF5FF;
-    margin: 0 0; 
-    padding: 0 0;
-}
-
-
 .container {
     background: #EBF5FF;
     margin:auto 150px 30px 150px;
@@ -18,21 +11,12 @@ html, body {
     border-radius: 8px;
     overflow: hidden;
 }
-/* .divider {
-    width: 0.13em;
-    background-color: #86c1ff;
-    margin: 3em;
-} */
+.font {
+    margin-top: 40px;
+}
 
 .timeLine_side {
     border-left: 0.13em solid #86c1ff;
     margin-left: 3em;
     padding-left: 3em;
 }
-
-h1 {
-    line-height: 0.50em;
-  }
-p {
-    line-height: 0.50em;
-  } 
